--- a/css/animations.css
+++ b/css/animations.css
@@ -1,4 +1,4 @@
-/* 加载动画 */
+/* 鍔犺浇鍔ㄧ敾 */
 .loader {
   width: 48px;
   height: 48px;
@@ -33,7 +33,7 @@
   }
 }
 
-/* 淡入动画 */
+/* 娣″叆鍔ㄧ敾 */
 .fade-in {
   animation: fadeIn 0.6s ease-out forwards;
 }
@@ -49,7 +49,7 @@
   }
 }
 
-/* 滑入动画 */
+/* 婊戝叆鍔ㄧ敾 */
 .slide-in {
   animation: slideIn 0.6s ease-out forwards;
 }
